--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,6 @@
   background-color: #282c3491;
 }
 .github-icon{
-  margin: 2em;
   width: 40%;
   filter: invert();
 }
@@ -83,6 +82,7 @@
   flex-direction: column;
   align-items: center;
   align-content: center;
+  height: fit-content;
 }
 .gh-demo-wrapper > a > p:hover{
   transform: scale(1.05);
@@ -108,7 +108,8 @@
   margin: -25vw 0 28vw 0;
   color: rgb(68, 71, 73);
   font-family: 'Bungee Shade';
-  filter: drop-shadow(0 0 10px black)
+  filter: drop-shadow(0 0 10px black);
+  font-size: 4vw;
 }
 #in-progress-wrapper{
   perspective: 5000px;
