Added Roz portfolio website

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@
 .quizzo{
   margin: -10vw 0 20vw 0;
 }
+.roz-web{
+  margin: 25vw 0 30vw 0;
+}
 .project-card > img, .project-text{
   margin: auto 0 auto 0;
   width: 100%;
